--- a/.flowconfig
+++ b/.flowconfig
@@ -50,6 +50,9 @@ module.system=haste
 
 munge_underscores=true
 
+esproposal.class_static_fields=enable
+esproposal.class_instance_fields=enable
+
 module.name_mapper='^image![a-zA-Z0-9$_-]+$' -> 'GlobalImageStub'
 module.name_mapper='^[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|webp\|m4v\|mov\|mp4\|mpeg\|mpg\|webm\|aac\|aiff\|caf\|m4a\|mp3\|wav\|html\)$' -> 'RelativeImageStub'
 
